--- a/src/net/zaszas/booka/ui/public/booka/Booka.css
+++ b/src/net/zaszas/booka/ui/public/booka/Booka.css
@@ -12,8 +12,10 @@ a:hover {
 	overflow: hidden;
 }
 
-.active {
+.editable-active {
 	background-color: #E1EBEF; /** azul claro **/
+	border-top: 1px solid #00AEEF;
+	border-bottom: 1px solid #00AEEF;
 }
 
 a.action {
@@ -25,9 +27,24 @@ a.action {
 	color: white;
 	font-family: sans;
 	-moz-border-radius: 0.5em;
+	-webkit-border-radius: 0.5em;
 }
 
 a.action:hover {
 	text-decoration: underline;
 	color: black;
+}
+
+.hover-blue {
+	-moz-border-radius: 1em;
+    -webkit-border-radius: 1em;
+	color: blue;
+}
+
+a.hover-blue:hover {
+	background-color: #E1EBEF; /** azul claro **/
+}
+
+a.hover-gray:hover {
+	background-color: #EFEFEF;
 }
